Помощь в классе UserRepositoryTest с поиском пользователя по логину