@@ -1,12 +1,16 @@
 package org.example.testing;
 
 import org.example.exceptions.UserNotFoundException;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 
 public class UserRepositoryTest {
@@ -20,21 +24,21 @@ public class UserRepositoryTest {
     @DisplayName("When there are users in repository, repository returns users list.")
     public void getAllUsersTest() {
         if (userRepository != null) {
-            userRepository.getAllUsers().stream().toList();
+            userRepository.addUser(user1);
+            Assertions.assertIterableEquals(userRepository.getAllUsers(), List.of(user1));
         } else {
             throw new UserNotFoundException("Список пользователей пуст.");
         }
     }
 
 
-    // Выдает No tests were found
     @Test
     @DisplayName("When there are no users in repository then repository returns empty list.")
-    public Collection<User> EmptyRepositoryTest() {
-        if (userRepository == null || userRepository.getAllUsers().isEmpty()) {
-            return Collections.emptyList();
+    public void emptyRepoTest() {
+        if (userRepository == null) {
+            Assertions.assertIterableEquals(userRepository.getAllUsers(), List.of(null));
         } else {
-            return userRepository.getAllUsers().stream().toList();
+            userRepository.getAllUsers().stream().toList();
         }
     }
 
@@ -42,22 +46,23 @@ public class UserRepositoryTest {
     // Выдает No tests were found
     @Test
     @DisplayName("When there is username that matches given user name in repository, then repository returns user.")
-    public Optional<User> userSearchByNameTest(String givenUserName) {
-        return userRepository.getAllUsers().stream()
-                .filter(u -> u.getUserName().equals(givenUserName))
-                .findFirst();
+    public void userSearchByNameTest() {
+        String givenUserName;
+        String actualResult = userRepository.getUserByUserName(givenUserName);
+        Assertions.assertEquals(userRepository, actualResult);
+
     }
 
 
     // Выдает No tests were found
     @Test
     @DisplayName("When there is not username found  that matches given user name in repository, then repository returns false.")
-    public boolean userSearchByNameWhenUserNotFoundTest(String givenUserName) {
-        if (userRepository.getAllUsers().stream().noneMatch(givenUserName :: equals)) {
-            return true;
+    public void userSearchByNameWhenUserNotFoundTest(String givenUserName) {
+        if (userRepository.getAllUsers().stream().noneMatch(givenUserName)) {
+            throw new UserNotFoundException("");
         } else {
-            return false;
-        }
 
+
+        }
     }
 }
